# gPlantUML

./: .gitignore  Claude.md  LICENSE  README.md  RELEASE_NOTES.md  meson.build  org.gnome.gDiagram.json  org.gnome.gPlantUML.json
.github/: Claude.md
.github/workflows/: ci.yml  release.yml
appimage/: AppImageBuilder.yml
data/: gschemas.compiled  meson.build  org.gnome.gDiagram.desktop.in  org.gnome.gDiagram.gresource.xml  org.gnome.gDiagram.gschema.xml  org.gnome.gDiagram.metainfo.xml  org.gnome.gPlantUML.desktop.in  org.gnome.gPlantUML.gresource.xml  org.gnome.gPlantUML.gschema.xml  org.gnome.gPlantUML.metainfo.xml
data/icons/: README.md
data/lang/: mermaid.lang  plantuml.lang
data/ui/: main-window.ui
debian/: changelog  control  copyright  rules
docs/: COMPLETE_FEATURE_LIST.md  FEATURE_MATRIX.md  FINAL_STATS.md  FINAL_SUMMARY.md  IMPROVEMENTS_LOG.md  KEYBOARD_SHORTCUTS.md  MERMAID_AST.md  MERMAID_IMPLEMENTATION.md  QUICK_START.md  REFACTORING.md  SHOWCASE.md
examples/: ALL_MERMAID_FEATURES.mmd  DIAGRAM_GALLERY.md  MERMAID_EXAMPLES.md  mermaid_class.mmd  mermaid_er.mmd  mermaid_flowchart.mmd  mermaid_gantt.mmd  mermaid_pie.mmd  mermaid_sequence.mmd  mermaid_showcase.mmd  mermaid_state.mmd
po/: POTFILES.in
screenshots/: GALLERY.md  README.md  mermaid_class.png.txt  mermaid_er.png.txt  mermaid_flowchart.png.txt  mermaid_sequence.png.txt  mermaid_state.png.txt
src/: Application.vala  config.vala.in  main.vala  meson.build
src/core/: ComplexityAnalyzer.vala  DiagramBeautifier.vala  DiagramComparison.vala  DiagramLinter.vala  DiagramOptimizer.vala  DiagramStats.vala  DiagramTemplates.vala  DiagramValidator.vala  Document.vala  ExportPresets.vala  FormatConverter.vala  PerformanceMonitor.vala  ThemeManager.vala
src/core/ast/: ActivityDiagram.vala  ClassDiagram.vala  ComponentDiagram.vala  DeploymentDiagram.vala  DiagramNode.vala  ERDiagram.vala  MermaidDiagram.vala  MindMapDiagram.vala  ObjectDiagram.vala  StateDiagram.vala  Theme.vala  UseCaseDiagram.vala
src/core/parser/: ActivityDiagramParser.vala  ClassDiagramParser.vala  ComponentDiagramParser.vala  DeploymentDiagramParser.vala  ERDiagramParser.vala  Lexer.vala  MindMapDiagramParser.vala  ObjectDiagramParser.vala  Parser.vala  Preprocessor.vala  StateDiagramParser.vala  Token.vala  UseCaseDiagramParser.vala
src/core/parser/mermaid/: MermaidClassParser.vala  MermaidERParser.vala  MermaidFlowchartParser.vala  MermaidGanttParser.vala  MermaidLexer.vala  MermaidPieParser.vala  MermaidSequenceParser.vala  MermaidStateParser.vala  MermaidToken.vala
src/core/parser/plantuml/: ActivityDiagramParser.vala  ClassDiagramParser.vala  ComponentDiagramParser.vala  DeploymentDiagramParser.vala  ERDiagramParser.vala  Lexer.vala  MindMapDiagramParser.vala  ObjectDiagramParser.vala  Preprocessor.vala  SequenceDiagramParser.vala  StateDiagramParser.vala  Token.vala  UseCaseDiagramParser.vala
src/core/parser/plantuml/activity/: ActivityActionParser.vala  ActivityControlFlowParser.vala  ActivityEdgeParser.vala  ActivityMetadataParser.vala  ActivityParserUtils.vala  ActivityStructureParser.vala  ActivityTextFormatter.vala
src/core/renderer/: GraphvizRenderer.vala  RenderUtils.vala
src/core/renderer/mermaid/: MermaidClassRenderer.vala  MermaidERRenderer.vala  MermaidFlowchartRenderer.vala  MermaidGanttRenderer.vala  MermaidPieRenderer.vala  MermaidSequenceRenderer.vala  MermaidStateRenderer.vala
src/core/renderer/plantuml/behavioral/: ActivityDiagramRenderer.vala  StateDiagramRenderer.vala  UseCaseDiagramRenderer.vala
src/core/renderer/plantuml/sequence/: SequenceDiagramRenderer.vala
src/core/renderer/plantuml/specialized/: DeploymentDiagramRenderer.vala  ERDiagramRenderer.vala  MindMapDiagramRenderer.vala
src/core/renderer/plantuml/structural/: ClassDiagramRenderer.vala  ComponentDiagramRenderer.vala  ObjectDiagramRenderer.vala
src/services/: AIService.vala
src/ui/: AIAssistantDialog.vala  DiagramCompareDialog.vala  DocumentView.vala  ExportDialog.vala  MainWindow.vala  PreferencesDialog.vala  PreviewPane.vala
src/util/: Debouncer.vala
tests/: document_test.vala  lexer_test.vala  mermaid_flowchart_parser_test.vala  mermaid_gantt_pie_test.vala  mermaid_integration_test.vala  mermaid_lexer_test.vala  mermaid_renderer_test.vala  mermaid_styling_test.vala  meson.build  parser_test.vala  utilities_test.vala
