sources = files(
  'main.vala',
  'Application.vala',
  'ui/MainWindow.vala',
  'ui/DocumentView.vala',
  'ui/PreviewPane.vala',
  'ui/PreferencesDialog.vala',
  'ui/AIAssistantDialog.vala',
  'ui/DiagramCompareDialog.vala',
  'ui/ExportDialog.vala',
  'core/Document.vala',
  'core/parser/Token.vala',
  'core/parser/Lexer.vala',
  'core/parser/Parser.vala',
  'core/parser/Preprocessor.vala',
  'core/parser/ClassDiagramParser.vala',
  'core/parser/ActivityDiagramParser.vala',
  'core/parser/UseCaseDiagramParser.vala',
  'core/parser/StateDiagramParser.vala',
  'core/parser/ComponentDiagramParser.vala',
  'core/parser/ObjectDiagramParser.vala',
  'core/parser/DeploymentDiagramParser.vala',
  'core/parser/ERDiagramParser.vala',
  'core/parser/MindMapDiagramParser.vala',
  'core/ast/DiagramNode.vala',
  'core/ast/Theme.vala',
  'core/ast/ClassDiagram.vala',
  'core/ast/ActivityDiagram.vala',
  'core/ast/UseCaseDiagram.vala',
  'core/ast/StateDiagram.vala',
  'core/ast/ComponentDiagram.vala',
  'core/ast/ObjectDiagram.vala',
  'core/ast/DeploymentDiagram.vala',
  'core/ast/ERDiagram.vala',
  'core/ast/MindMapDiagram.vala',
  'core/renderer/GraphvizRenderer.vala',
  'util/Debouncer.vala',
  'services/AIService.vala',
)

sources += config_file

resources = gnome.compile_resources(
  'gplantuml-resources',
  join_paths(meson.project_source_root(), 'data', 'org.gnome.gPlantUML.gresource.xml'),
  source_dir: join_paths(meson.project_source_root(), 'data'),
  c_name: 'gplantuml',
)

executable('gplantuml',
  sources,
  resources,
  dependencies: [
    gtk4_dep,
    libadwaita_dep,
    gtksourceview_dep,
    gee_dep,
    libgvc_dep,
    librsvg_dep,
    cairo_dep,
    soup_dep,
    json_dep,
  ],
  install: true,
)
