sources = files(
  'main.vala',
  'Application.vala',
  'ui/MainWindow.vala',
  'ui/DocumentView.vala',
  'ui/PreviewPane.vala',
  'ui/PreferencesDialog.vala',
  'ui/AIAssistantDialog.vala',
  'ui/DiagramCompareDialog.vala',
  'ui/ExportDialog.vala',
  'core/Document.vala',
  'core/DiagramValidator.vala',
  'core/DiagramStats.vala',
  'core/DiagramTemplates.vala',
  'core/FormatConverter.vala',
  'core/ComplexityAnalyzer.vala',
  'core/DiagramLinter.vala',
  'core/PerformanceMonitor.vala',
  'core/DiagramOptimizer.vala',
  'core/ExportPresets.vala',
  'core/DiagramBeautifier.vala',
  'core/ThemeManager.vala',
  'core/DiagramComparison.vala',
  'core/parser/plantuml/Token.vala',
  'core/parser/plantuml/Lexer.vala',
  'core/parser/plantuml/SequenceDiagramParser.vala',
  'core/parser/plantuml/Preprocessor.vala',
  'core/parser/mermaid/MermaidToken.vala',
  'core/parser/mermaid/MermaidLexer.vala',
  'core/parser/mermaid/MermaidFlowchartParser.vala',
  'core/parser/mermaid/MermaidSequenceParser.vala',
  'core/parser/mermaid/MermaidStateParser.vala',
  'core/parser/mermaid/MermaidClassParser.vala',
  'core/parser/mermaid/MermaidERParser.vala',
  'core/parser/mermaid/MermaidGanttParser.vala',
  'core/parser/mermaid/MermaidPieParser.vala',
  'core/renderer/mermaid/MermaidFlowchartRenderer.vala',
  'core/renderer/mermaid/MermaidSequenceRenderer.vala',
  'core/renderer/mermaid/MermaidStateRenderer.vala',
  'core/renderer/mermaid/MermaidClassRenderer.vala',
  'core/renderer/mermaid/MermaidERRenderer.vala',
  'core/renderer/mermaid/MermaidGanttRenderer.vala',
  'core/renderer/mermaid/MermaidPieRenderer.vala',
  'core/parser/plantuml/ClassDiagramParser.vala',
  'core/parser/plantuml/ActivityDiagramParser.vala',
  'core/parser/plantuml/activity/ActivityTextFormatter.vala',
  'core/parser/plantuml/activity/ActivityParserUtils.vala',
  'core/parser/plantuml/activity/ActivityEdgeParser.vala',
  'core/parser/plantuml/activity/ActivityActionParser.vala',
  'core/parser/plantuml/activity/ActivityControlFlowParser.vala',
  'core/parser/plantuml/activity/ActivityStructureParser.vala',
  'core/parser/plantuml/activity/ActivityMetadataParser.vala',
  'core/parser/plantuml/UseCaseDiagramParser.vala',
  'core/parser/plantuml/StateDiagramParser.vala',
  'core/parser/plantuml/ComponentDiagramParser.vala',
  'core/parser/plantuml/ObjectDiagramParser.vala',
  'core/parser/plantuml/DeploymentDiagramParser.vala',
  'core/parser/plantuml/ERDiagramParser.vala',
  'core/parser/plantuml/MindMapDiagramParser.vala',
  'core/ast/DiagramNode.vala',
  'core/ast/Theme.vala',
  'core/ast/ClassDiagram.vala',
  'core/ast/ActivityDiagram.vala',
  'core/ast/UseCaseDiagram.vala',
  'core/ast/StateDiagram.vala',
  'core/ast/ComponentDiagram.vala',
  'core/ast/ObjectDiagram.vala',
  'core/ast/DeploymentDiagram.vala',
  'core/ast/ERDiagram.vala',
  'core/ast/MindMapDiagram.vala',
  'core/ast/MermaidDiagram.vala',
  'core/renderer/GraphvizRenderer.vala',
  'core/renderer/RenderUtils.vala',
  'core/renderer/plantuml/sequence/SequenceDiagramRenderer.vala',
  'core/renderer/plantuml/structural/ClassDiagramRenderer.vala',
  'core/renderer/plantuml/structural/ComponentDiagramRenderer.vala',
  'core/renderer/plantuml/structural/ObjectDiagramRenderer.vala',
  'core/renderer/plantuml/behavioral/ActivityDiagramRenderer.vala',
  'core/renderer/plantuml/behavioral/UseCaseDiagramRenderer.vala',
  'core/renderer/plantuml/behavioral/StateDiagramRenderer.vala',
  'core/renderer/plantuml/specialized/DeploymentDiagramRenderer.vala',
  'core/renderer/plantuml/specialized/ERDiagramRenderer.vala',
  'core/renderer/plantuml/specialized/MindMapDiagramRenderer.vala',
  'util/Debouncer.vala',
  'services/AIService.vala',
)

sources += config_file

resources = gnome.compile_resources(
  'gdiagram-resources',
  join_paths(meson.project_source_root(), 'data', 'org.gnome.gDiagram.gresource.xml'),
  source_dir: join_paths(meson.project_source_root(), 'data'),
  c_name: 'gdiagram',
)

executable('gdiagram',
  sources,
  resources,
  dependencies: [
    gtk4_dep,
    libadwaita_dep,
    gtksourceview_dep,
    gee_dep,
    libgvc_dep,
    librsvg_dep,
    cairo_dep,
    soup_dep,
    json_dep,
    math_dep,
  ],
  install: true,
)
